# yafs

./: .pre-commit-config.yaml  cli  docker-compose.yaml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
migrations/: env.py
tests/: conftest.py
yafs/: bootstrap.py  router.py  settings.py
yafs/apps/scheduler/: enums.py
yafs/apps/scheduler/repositories/: scheduler.py
yafs/apps/storages/: commands.py  depends.py  enums.py  exceptions.py  models.py  router.py
yafs/apps/storages/repositories/: __init__.py  file.py  file_storage_provider.py  storage.py
yafs/apps/storages/schemas/: __init__.py  files.py  storages.py
yafs/apps/storages/services/: __init__.py  file.py  storage.py
yafs/apps/storages/use_cases/: __init__.py  add_storage.py  delete_files.py  file_info.py  read_file.py  upload_file.py  upload_files.py
yafs/cli/: bootstrap.py  utils.py
yafs/cli/commands/: hello.py
