[project]
name = "yafs"
version = "0.1.0"
description = "Yet another file storage service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.14.0",
    "apscheduler>=3.11.0",
    "fast-clean>=1.4.0",
    "fastapi>=0.115.6",
    "fastapi-cache2[redis]>=0.2.2",
    "granian[reload]>=2.4.0",
    "httpx>=0.28.1",
    "miniopy-async>=1.21.1",
    "psycopg[binary,pool]>=3.2.3",
    "pydantic-settings>=2.7.1",
    "pydantic[email]>=2.10.4",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.36",
    "sqlalchemy-utils>=0.41.2",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "docformatter>=1.7.5",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "mypy>=1.14.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.1",
    "pytest-cov>=6.0.0",
    "pytest-env>=1.1.5",
    "pytest-httpx>=0.35.0",
    "pytest-mock>=3.14.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.8.6",
    "types-pyyaml>=6.0.12.20241230",
    "types-redis>=4.6.0.20241004",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["Q"]

# exclude = ["jupyter_notebook_config.py"]
lint.select = [
    "E",  # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
lint.ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

src = ["checker", "tests"]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []

[tool.coverage.report]
omit = [
  'tests/*',
  'migrations/*'
]
